# SpaceInvaders

./: .clangd  .gitignore  00CMakeLists.txt  AndroidManifest.xml  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.Android2  README.md  Readme.md  SpaceInvaders  android.mk  android.sh  brun.sh  cmake_install.cmake  launch copy.json  logic.md  nvim.lua  project.keystore  raylib_game.c  raylib_game_final.apk
.build/: CMakeCache.txt  Makefile  SpaceInvaderS  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: alien.cpp.2C57018E5B1D42F8.idx  alien.cpp.4AA1D1F8A1F78DCF.idx  alien.cpp.6E948ADE0FC9640B.idx  alien.cpp.781085A26B0560A8.idx  alien.hpp.0849E22860BFB26B.idx  alien.hpp.4C3E705636A75160.idx  alien.hpp.61CF7393271A3CA5.idx  alien.hpp.C4023A358AADF4B2.idx  block.cpp.21EB7924B759D5A5.idx  block.cpp.609FA191EC791CAF.idx  block.cpp.7265E0B29A2010BE.idx  block.cpp.C7459AFF9326524C.idx  block.h.5EA5CAE88621B3A3.idx  block.h.8F12E18F2F771F55.idx  block.h.B5E8B102F45187A9.idx  block.h.F9C8D48EE02E5155.idx  dash.cpp.28B2BF183638E33C.idx  dash.cpp.28C6282DD98E6187.idx  dash.cpp.97E79078A9FFBF83.idx  dash.cpp.BF5F0162247CC0BD.idx  dash.hpp.06EF7531F701F193.idx  dash.hpp.17513EA8415A063F.idx  dash.hpp.3148A0423B9AA99E.idx  dash.hpp.5355FBC39A760F93.idx  game.cpp.11ED0CE94C69F1D3.idx  game.cpp.158DF84A96B2A173.idx  game.cpp.4AD1CB003B7FF892.idx  game.cpp.D08A4EE5EC275629.idx  game.hpp.0AF55BC4BAB7EB06.idx  game.hpp.3F7C4EEB09CBA6B0.idx  game.hpp.52088572BFB66351.idx  game.hpp.EEA86622996B5DAD.idx  globvars.hpp.5C78242FB0B37AA9.idx  globvars.hpp.69D054CEB7F1DF29.idx  laser.cpp.05394AD359FC9339.idx  laser.cpp.1744D1DA9D847433.idx  laser.cpp.92D4A63451B3AC0D.idx  laser.cpp.DCB153A06CC0E1C3.idx  laser.hpp.5F526ECB1AD54818.idx  laser.hpp.978BB31B2C74737F.idx  (+50 more)
android.raylib_game/: AndroidManifest.xml  raylib_game.keystore
android.raylib_game/res/values/: strings.xml
android.raylib_game/src/com/shujrah/spaceinvaders/: NativeLoader.java  R.java
assets/Shaders/: bloom.fs
assets/levels/: 1.txt  2.txt
include/: alien.hpp  block.h  dash.hpp  game.hpp  globvars.hpp  laser.hpp  level.hpp  obstacle.hpp  player.h  singleton.hpp  spaceship.hpp  z.hpp
src/: alien.cpp  block.cpp  dash.cpp  game.cpp  laser.cpp  learnCPP  learnCPP.cpp  level.cpp  main copy.cpp00  main.cpp  obstacle.cpp  player.cpp  spaceship.cpp  test.cpp  z.cpp
src/com/shujrah/spaceinvaders/: NativeLoader.java
src/learnCPP.dSYM/Contents/: Info.plist
src/learnCPP.dSYM/Contents/Resources/DWARF/: learnCPP
src/learnCPP.dSYM/Contents/Resources/Relocations/x86_64/: learnCPP.yml
